<resources>
    <string name="app_name">Score_Java</string>
    <string name="name1">Team A</string>
    <string name="name2">Team B</string>
    <string name="default_score" translatable="false">0</string>
    <string name="add1" translatable="false">+1</string>
    <string name="add2" translatable="false">+2</string>
    <string name="add3" translatable="false">+3</string>
    <string name="refresh" translatable="false">refresh_image_button</string>
    <string name="undo" translatable="false">undo_image_button</string>
    <string name="KEY_SHP" translatable="false">MY_DATA</string>
</resources>
